Added styling to login page and began styling of header and dashboard page

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,5 +1,8 @@
 // Colors
-
+$main-green: rgb(9, 185, 80);
+$main-brown: #673C35;
+$main-black: #171717;
+$main-lightgray: #f7f7f7;
 
 //Spacing/Sizes
 $s-size: 1.2rem;
