--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -2,18 +2,17 @@ html {
 	font-size: 62.5%;
 }
 body {
+	border-color: $main-brown;
+	color: $main-brown;
 	font-family: Helvetica, Arial, sans-serif;
 	font-size: $m-size;
+	line-height: 1.2;
 }
 
 button {
 	cursor: pointer;
 
 	&:disabled {
-	cursor: default;
+		cursor: default;
 	}
-}
-
-.is-active {
-	font-weight: bold;
 }
