--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,3 +1,6 @@
+* {
+	box-sizing: border-box;
+}
 html {
 	font-size: 62.5%;
 }
@@ -15,4 +18,11 @@ button {
 	&:disabled {
 		cursor: default;
 	}
+}
+
+hr {
+	border: 0;
+    height: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
