--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -15,16 +15,15 @@
     }
 
     &--expense {
-        background: red;
+        background: $main-red;
         color: $main-lightgray;
         font-size: 1.4rem;
         line-height: 1;
-        margin: 0 1rem;
         padding: 1rem;
         text-align: center;
 
         &:hover {
-            background: darken(red, 10%);
+            background: darken($main-red, 10%);
         }
     }
 
@@ -33,12 +32,19 @@
         color: $main-lightgray;
         font-size: 1.4rem;
         line-height: 1;
-        margin: 0 1rem;
         padding: 1rem;
         text-align: center;
 
         &:hover {
             background: darken($main-green, 10%);
+        }
+    }
+
+    &--remove {
+        background: $main-brown;
+
+        &:hover { 
+            background: darken($main-brown, 10%);
         }
     }
 }
