--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,5 +1,6 @@
 .header {
     background: $main-green;
+    box-shadow: 0 0 2px rgba(0,0,0,0.12), 0 2px 2px rgba(0,0,0,0.24);
 
     &__title {
         color: $main-brown;
