--- a/src/styles/components/_input-filters.scss
+++ b/src/styles/components/_input-filters.scss
@@ -5,6 +5,7 @@
 
     @media (min-width: $desktop-breakpoint) {
         flex-direction: row;
+        justify-content: center;
         margin-bottom: $l-size;
     }
 
@@ -15,4 +16,21 @@
             margin: 0 $s-size 0 0;
         }
     }
+}
+
+.text-input {
+    border: 1px solid #cacccd;
+    height: 50px;
+    font-size: $m-size;
+    font-weight: 300;
+    padding: $s-size;
+}
+
+.select {
+    @extend .text-input;
+}
+
+.textarea {
+    @extend .text-input;
+    height: 10rem;
 }
