--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,3 +6,7 @@
 @import './components/content-container';
 @import './components/page-header';
 @import './components/input-filters';
+@import './components/form';
+@import './components/visibility';
+@import './components/list';
+@import './components/loader';
