Fixed issue where expenses and incomes sections were displaying differently in the summary component

--- a/src/styles/components/_page-header.scss
+++ b/src/styles/components/_page-header.scss
@@ -50,12 +50,30 @@
         font-weight: 300;
         padding: 0 $s-size;
         text-align: center;
+        width: 12rem;
+
+        @media (min-width: 25rem) {
+            width: 20rem;
+        }
+
+        @media (min-width: $desktop-breakpoint) {
+            width: 40rem;
+        }
     }
 
     &__incomes {
         font-weight: 300;
         padding: 0 $s-size;
         text-align: center;
+        width: 12rem;
+
+        @media (min-width: 25rem) {
+            width: 20rem;
+        }
+
+        @media (min-width: $desktop-breakpoint) {
+            width: 40rem;
+        }
     }
 
     &__title {
